--- a/examples/sample/coecluster.yaml
+++ b/examples/sample/coecluster.yaml
@@ -1,5 +1,5 @@
-apiVersion: sample.template.crossplane.io/v1alpha1
-kind: MyType
+apiVersion: coe.openstack.crossplane.io/v1alpha1
+kind: COECluster
 metadata:
   name: example
 spec:
