--- a/package/crds/coecluster.openstack.crossplane.io_coeclusters.yaml
+++ b/package/crds/coecluster.openstack.crossplane.io_coeclusters.yaml
@@ -4,14 +4,14 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.3.0
   creationTimestamp: null
-  name: mytypes.sample.template.crossplane.io
+  name: coeclusters.coecluster.openstack.crossplane.io
 spec:
-  group: sample.template.crossplane.io
+  group: coecluster.openstack.crossplane.io
   names:
-    kind: MyType
-    listKind: MyTypeList
-    plural: mytypes
-    singular: mytype
+    kind: COECluster
+    listKind: COEClusterList
+    plural: coeclusters
+    singular: coecluster
   scope: Cluster
   versions:
   - additionalPrinterColumns:
@@ -30,7 +30,7 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: A MyType is an example API type
+        description: A COECluster is an example API type
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
@@ -41,7 +41,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: A MyTypeSpec defines the desired state of a MyType.
+            description: A COEClusterSpec defines the desired state of a COECluster.
             properties:
               deletionPolicy:
                 description: DeletionPolicy specifies what will happen to the underlying external when this managed resource is deleted - either "Delete" or "Orphan" the external resource. The "Delete" policy is the default when no policy is specified.
@@ -50,7 +50,7 @@ spec:
                 - Delete
                 type: string
               forProvider:
-                description: MyTypeParameters are the configurable fields of a MyType.
+                description: COEClusterParameters are the configurable fields of a COECluster.
                 properties:
                   configurableField:
                     type: string
@@ -92,10 +92,10 @@ spec:
             - forProvider
             type: object
           status:
-            description: A MyTypeStatus represents the observed state of a MyType.
+            description: A COEClusterStatus represents the observed state of a COECluster.
             properties:
               atProvider:
-                description: MyTypeObservation are the observable fields of a MyType.
+                description: COEClusterObservation are the observable fields of a COECluster.
                 properties:
                   observableField:
                     type: string
