--- a/package/crds/openstack.crossplane.io_providerconfigs.yaml
+++ b/package/crds/openstack.crossplane.io_providerconfigs.yaml
@@ -4,9 +4,9 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.3.0
   creationTimestamp: null
-  name: providerconfigs.template.crossplane.io
+  name: providerconfigs.openstack.crossplane.io
 spec:
-  group: template.crossplane.io
+  group: openstack.crossplane.io
   names:
     kind: ProviderConfig
     listKind: ProviderConfigList
@@ -14,18 +14,10 @@ spec:
     singular: providerconfig
   scope: Cluster
   versions:
-  - additionalPrinterColumns:
-    - jsonPath: .metadata.creationTimestamp
-      name: AGE
-      type: date
-    - jsonPath: .spec.credentials.secretRef.name
-      name: SECRET-NAME
-      priority: 1
-      type: string
-    name: v1alpha1
+  - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: A ProviderConfig configures a Template provider.
+        description: A ProviderConfig configures a OpenStack provider.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
