--- a/package/crds/openstack.crossplane.io_providerconfigusages.yaml
+++ b/package/crds/openstack.crossplane.io_providerconfigusages.yaml
@@ -4,10 +4,14 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.3.0
   creationTimestamp: null
-  name: providerconfigusages.template.crossplane.io
+  name: providerconfigusages.openstack.crossplane.io
 spec:
-  group: template.crossplane.io
+  group: openstack.crossplane.io
   names:
+    categories:
+    - crossplane
+    - provider
+    - openstack
     kind: ProviderConfigUsage
     listKind: ProviderConfigUsageList
     plural: providerconfigusages
@@ -30,7 +34,7 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: A ProviderConfigUsage indicates that a resource is using a ProviderConfig.
+        description: A ProviderConfigUsage indicates that a resource is using a ProviderConfig. Please replace `PROVIDER-NAME` with your actual provider name, like `aws`, `azure`, `gcp`, `alibaba`
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
